# AI-Maintenance-System

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
backend/: .env.example  .env.production.template  Dockerfile  _test_apis.py  alembic.ini  create_demo.py  live_sensor_demo.py  merge_orgs.py  pyproject.toml  requirements.txt  seed_presentation_data.py  setup_env.bat  setup_env.sh  test_audit.py
backend/alembic/: env.py
backend/alembic/versions/: 23ad6ab309ea_initial_schema.py  5d08ffee0fe6_add_user_prefs_audit_logs.py  7398c2fc090e_add_maintenance_kanban_fields.py  a1b2c3d4e5f6_add_equipment_types.py  b4f5a6c7d8e9_add_predictions_composite_index.py  e40bf2878c28_fix_last_login_timezone.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: deps.py  router.py  schemas.py
backend/app/core/: __init__.py  exceptions.py  logging.py  risk.py  security.py
backend/app/db/: base.py  redis.py  session.py
backend/app/db/models/: alert.py  equipment.py  organization.py  prediction.py  sensor.py
backend/app/middleware/: rate_limit.py  request_logging.py  tenant.py
backend/app/ml/: __init__.py  features.py  inference.py  monitoring.py  preprocessing.py  training.py
backend/app/services/: alert_service.py  audit.py  auto_predict.py  simulation.py  websocket.py
backend/scripts/: backup_database.py  reset_database.py  seed_database.py  train_models.py  upgrade_admin.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_endpoints.py  test_middleware.py  test_ml.py  test_schemas.py  test_security.py
(+49 files in other folders)
